--- a/index.liquid
+++ b/index.liquid
@@ -4,4 +4,4 @@ title: 11ty Boilerplate
 ---
 
 <h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
-<img alt="pine" src="/images/pine.png" width="50" />
+<img alt="laptop" src="/images/laptop.png" width="50" />ss
