--- a/index.liquid
+++ b/index.liquid
@@ -1,7 +1,13 @@
 ---
 layout: layout.liquid
-title: 11ty Boilerplate
+title: Home
 ---
 
-<h1>Yet Another 11ty <strong>Boilerplate</strong></h1>
-<img alt="laptop" src="/images/laptop.png" width="50" />ss
+
+<h1>Top <strong>Three</strong> Things I <i>Cannot</i> Live Without</h1>
+
+<ul>
+    <li><a href="/Item1/" title="Item 1">Item1</a></li>
+    <li><a href="/Item2/" title="Item 2">Item2</a></li>
+    <li><a href="/Item3/" title="Item 1">Item3</a></li>
+</ul>
